--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<section class="d-flex header__section wrapper">
 				<aside class="header__container">
 					<h1 class="heading">Nguyễn Công Dũng</h1>
-					<h2 class="exp-level">Front-end Fresher</h2>
+					<h2 class="exp-level">Front-end Middle</h2>
 				</aside>
 
 				<address class="content__container">
