--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>NguyenCongDung-resume</title>
+		<title>Nguyễn Công Dũng Resume</title>
 
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -11,7 +11,6 @@
 			rel="stylesheet"
 		/>
 
-		<link rel="stylesheet" href="style.css" />
 
 		<!-- SEO -->
 		<!-- Primary Meta Tags -->
@@ -32,7 +31,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="//raw.githubusercontent.com/DungGramer/DungGramer/master/image/resume-cover.png"
+			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
 		/>
 
 		<!-- Twitter -->
@@ -46,7 +45,7 @@
 		/>
 		<meta
 			property="twitter:image"
-			content="//raw.githubusercontent.com/DungGramer/DungGramer/master/image/resume-cover.png"
+			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
 		/>
 
 		<!-- Custom -->
@@ -64,7 +63,7 @@
 	<body>
 		<div id="root"></div>
 	</body>
-  <script src="index.jsx" type="module"></script>
+  <script src="./index.jsx" type="module"></script>
 
 	<script>
 		let btnDownload = document.querySelector(".download");
