--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>NguyenCongDung-resume</title>
+		<title>Nguyễn Công Dũng Resume</title>
 
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
@@ -31,7 +31,7 @@
 		/>
 		<meta
 			property="og:image"
-			content="//raw.githubusercontent.com/DungGramer/DungGramer/master/image/resume-cover.png"
+			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
 		/>
 
 		<!-- Twitter -->
@@ -45,7 +45,7 @@
 		/>
 		<meta
 			property="twitter:image"
-			content="//raw.githubusercontent.com/DungGramer/DungGramer/master/image/resume-cover.png"
+			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
 		/>
 
 		<!-- Custom -->
@@ -59,6 +59,8 @@
 		<link rel="me" href="sms:+84334565999" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="renderer" content="webkit|ie-comp|ie-stand" />
+
+    <base href="https://dunggramer.github.io/DungGramer/" />
 		<script type="module" crossorigin src="/assets/index.649a6306.js"></script>
 		<link rel="stylesheet" href="/assets/index.0690b14d.css">
 	</head>
