--- a/src/index.html
+++ b/src/index.html
@@ -59,6 +59,8 @@
 		<link rel="me" href="sms:+84334565999" />
 		<meta http-equiv="x-ua-compatible" content="ie=edge" />
 		<meta name="renderer" content="webkit|ie-comp|ie-stand" />
+
+    <base href="https://dunggramer.github.io/DungGramer/" />
 	</head>
 	<body>
 		<div id="root"></div>
