--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 		<meta name="renderer" content="webkit|ie-comp|ie-stand" />
 
     <base href="https://dunggramer.github.io/DungGramer/" />
-		<script type="module" crossorigin src="/assets/index.649a6306.js"></script>
-		<link rel="stylesheet" href="/assets/index.0690b14d.css">
+		<script type="module" crossorigin src="./assets/index.649a6306.js"></script>
+		<link rel="stylesheet" href="./assets/index.0690b14d.css">
 	</head>
 	<body>
 		<div id="root"></div>
