Try to move to jsx

--- a/src/index.html
+++ b/src/index.html
@@ -65,7 +65,7 @@
 	</body>
   <script src="./index.jsx" type="module"></script>
 
-	<script>
+	<!-- <script>
 		let btnDownload = document.querySelector(".download");
 		let btnPrint = document.querySelector(".print");
 		btnPrint.addEventListener("click", function () {
@@ -91,5 +91,5 @@
 			}
 			prevScrollpos = currentScrollPos;
 		};
-	</script>
+	</script> -->
 </html>
