Move to webpack

--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
 	<body>
 		<div id="root"></div>
 	</body>
-  <script src="./index.jsx" type="module"></script>
+  <script src="./bundle.js" type="module"></script>
 
 	<!-- <script>
 		let btnDownload = document.querySelector(".download");
