--- a/index.html
+++ b/index.html
@@ -1,97 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Nguyễn Công Dũng Resume</title>
-
-		<link rel="preconnect" href="https://fonts.gstatic.com" />
-		<link
-			href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap"
-			rel="stylesheet"
-		/>
-
-
-		<!-- SEO -->
-		<!-- Primary Meta Tags -->
-		<meta name="title" content="Nguyễn Công Dũng - Resume" />
-		<meta
-			name="description"
-			content="Website is resume of Nguyễn Công Dũng - DungGramer"
-		/>
-
-		<!-- Open Graph / Facebook -->
-		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://github.com/DungGramer" />
-		<meta property="article:author" content="DungGramer" />
-		<meta property="og:title" content="Nguyễn Công Dũng - Resume" />
-		<meta
-			property="og:description"
-			content="Website is resume of Nguyễn Công Dũng - DungGramer"
-		/>
-		<meta
-			property="og:image"
-			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
-		/>
-
-		<!-- Twitter -->
-		<meta property="twitter:card" content="summary_large_image" />
-		<meta name="twitter:creator" content="@DungGramer" />
-		<meta property="twitter:url" content="https://github.com/DungGramer" />
-		<meta property="twitter:title" content="Nguyễn Công Dũng - Resume" />
-		<meta
-			property="twitter:description"
-			content="Website is resume of Nguyễn Công Dũng - DungGramer"
-		/>
-		<meta
-			property="twitter:image"
-			content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"
-		/>
-
-		<!-- Custom -->
-		<meta name="theme-color" content="#454545" />
-		<link
-			rel="me"
-			href="https://www.facebook.com/dung.dev.gramer/"
-			type="text/html"
-		/>
-		<link rel="me" href="mailto:dung.dev.gramer.com" />
-		<link rel="me" href="sms:+84334565999" />
-		<meta http-equiv="x-ua-compatible" content="ie=edge" />
-		<meta name="renderer" content="webkit|ie-comp|ie-stand" />
-		<script type="module" crossorigin src="./assets/index.760372be.js"></script>
-		<link rel="stylesheet" href="./assets/index.a61d18bd.css">
-	</head>
-	<body>
-		<div id="root"></div>
-	</body>
-  
-
-	<script>
-		let btnDownload = document.querySelector(".download");
-		let btnPrint = document.querySelector(".print");
-		btnPrint.addEventListener("click", function () {
-			window.print();
-		});
-		window.addEventListener("click", function () {
-			btnDownload.classList.remove("open");
-		});
-		btnDownload.addEventListener("click", function () {
-			event.stopPropagation();
-			this.classList.toggle("open");
-		});
-
-		// Scroll Action
-		var prevScrollpos = window.pageYOffset;
-		window.onscroll = function () {
-			var currentScrollPos = window.pageYOffset;
-			if (prevScrollpos < currentScrollPos) {
-				btnDownload.style.bottom = "10px";
-			} else {
-				btnDownload.classList.remove("open");
-				btnDownload.style.bottom = "-80px";
-			}
-			prevScrollpos = currentScrollPos;
-		};
-	</script>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><title>Nguyễn Công Dũng Resume</title><link rel="preconnect" href="https://fonts.gstatic.com"/><link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet"/><meta name="title" content="Nguyễn Công Dũng - Resume"/><meta name="description" content="Website is resume of Nguyễn Công Dũng - DungGramer"/><meta property="og:type" content="website"/><meta property="og:url" content="https://github.com/DungGramer"/><meta property="article:author" content="DungGramer"/><meta property="og:title" content="Nguyễn Công Dũng - Resume"/><meta property="og:description" content="Website is resume of Nguyễn Công Dũng - DungGramer"/><meta property="og:image" content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"/><meta property="twitter:card" content="summary_large_image"/><meta name="twitter:creator" content="@DungGramer"/><meta property="twitter:url" content="https://github.com/DungGramer"/><meta property="twitter:title" content="Nguyễn Công Dũng - Resume"/><meta property="twitter:description" content="Website is resume of Nguyễn Công Dũng - DungGramer"/><meta property="twitter:image" content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png"/><meta name="theme-color" content="#454545"/><link rel="me" href="https://www.facebook.com/dung.dev.gramer/" type="text/html"/><link rel="me" href="mailto:dung.dev.gramer.com"/><link rel="me" href="sms:+84334565999"/><meta http-equiv="x-ua-compatible" content="ie=edge"/><meta name="renderer" content="webkit|ie-comp|ie-stand"/><script defer="defer" src="assets/js/main.624aa3ec.js"></script><link href="css/main.ff92ce26.css" rel="stylesheet"></head><body><div id="root"></div></body><script>document.addEventListener("DOMContentLoaded",(()=>{let e=document.querySelector(".download");document.querySelector(".print").addEventListener("click",(function(){window.print()})),window.addEventListener("click",(function(){e.classList.remove("open")})),e.addEventListener("click",(function(){event.stopPropagation(),this.classList.toggle("open")}));var t=window.pageYOffset;window.onscroll=function(){var n=window.pageYOffset;t<n?e.style.bottom="10px":(e.classList.remove("open"),e.style.bottom="-80px"),t=n}}))</script></html>
