Update color primary

--- a/public/index.html
+++ b/public/index.html
@@ -34,7 +34,7 @@
     content="https://raw.githubusercontent.com/DungGramer/DungGramer/master/public/image/cover-resume.png" />
 
   <!-- Custom -->
-  <meta name="theme-color" content="#454545" />
+  <meta name="theme-color" content="#4387f4" />
   <link rel="me" href="https://www.facebook.com/dung.dev.gramer/" type="text/html" />
   <link rel="me" href="mailto:dung.dev.gramer.com" />
   <link rel="me" href="sms:+84334565999" />
