--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" />
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600;700&display=swap" rel="stylesheet" />
 
+  <!--[if lte IE 6]>
+    <link rel="stylesheet" href="ie6-fixes.css" />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <![endif]-->
 
   <!-- SEO -->
   <!-- Primary Meta Tags -->
@@ -35,8 +39,8 @@
 
   <!-- Custom -->
   <meta name="theme-color" content="#4387f4" />
-  <link rel="me" href="https://www.facebook.com/dung.dev.gramer/" type="text/html" />
-  <link rel="me" href="mailto:dung.dev.gramer.com" />
+  <link rel="me" href="https://www.facebook.com/dung.gramer/" type="text/html" />
+  <link rel="me" href="mailto:dung.dev.gramer@gmail.com" />
   <link rel="me" href="sms:+84334565999" />
   <meta http-equiv="x-ua-compatible" content="ie=edge" />
   <meta name="renderer" content="webkit|ie-comp|ie-stand" />
